/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.3.3/samples
 */
  
 plugins {
	id 'java'
	id 'maven-publish'
}
 
 
repositories { 
	mavenLocal()
    mavenCentral() 
    gradlePluginPortal()
}


apply plugin: 'java'
apply plugin: 'maven-publish'


sourceSets {
        main.java.srcDirs = ['src' ]
        main.resources.srcDirs = ['resources' ] 
        test.java.srcDirs = ['test']
        test.resources.srcDirs = ['resources_test']
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8      
}

configurations {
	extraLibs.extendsFrom implementation
}

dependencies {
	implementation project(':InterfaceFactory:emfEI4Modbus')
    
    implementation group: 'ch.smartgridready', name: 'sgr-driver-api', version: '0.2.1'
    implementation group: 'ch.smartgridready', name: 'easymodbus', version: '0.2.1'         
    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.1.3'
    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5-fluent', version: '5.1.3'
    implementation group: 'io.burt', name: 'jmespath-core', version: '0.5.1'
    implementation group: 'io.burt', name: 'jmespath-jackson', version: '0.5.1'
    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
    implementation group: 'io.vavr', name: 'vavr', version: '0.10.4'



	implementation group: 'org.eclipse.emf', name: 'org.eclipse.emf.ecore', version: '2.24.0'
	implementation group: 'org.eclipse.emf', name: 'org.eclipse.emf.ecore.xmi', version: '2.16.0'	
	implementation group: 'org.eclipse.emf', name: 'org.eclipse.emf.common', version: '2.24.0'
	implementation group: 'org.eclipse.emf', name: 'org.eclipse.emf.edit', version: '2.17.0'
		
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.19.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.19.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.19.0'
    
		
			
	testImplementation group: 'org.yaml', name: 'snakeyaml', version: '1.27'
	testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.10.0'
	testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.10.0'
	testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.10.0'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.9.2'
	
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

jar {
  
	from sourceSets.main.allSource

	duplicatesStrategy='exclude'
	exclude('**/ECLIPSE_.SF', '**/ECLIPSE_.DSA', '**/ECLIPSE_.RSA')
	
	// Remove this after project cleanup
	exclude('*.lnk', '.project')

    from {
		// configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
		configurations.extraLibs.collect {
		   if(it.name.matches("emfEI4Modbus(.*).jar")) {
                zipTree(it)
           } 
        }
    }
}

test { // needed that JUnit5 is used for tests.
    useJUnitPlatform()
}


tasks."compileJava".dependsOn ':InterfaceFactory:emfEI4Modbus:publishToMavenLocal'

publishing {

    repositories {
        maven {
            name = "Github"
            url = uri("https://maven.pkg.github.com/SmartgridReady/SGrJavaPackages")
            credentials {
                username = findProperty("github.username")
                password = findProperty("github.token")
            }
        }
    }

    publications {
        impl(MavenPublication) {
            groupId = 'ch.smartgridready'
            artifactId = 'commhandler4modbus'
            version = '0.2.1'

            from components.java
            pom {
                url.set("https://github.com/SmartgridReady/SGrJavaPackages.git")
            }
        }
    }
}
